# crewai_for_deploy

./: .gitignore  README.md  api_test.ipynb  pyproject.toml
src/crewai_for_deploy/: crew.py  main.py
