[project]
name = "crewai_for_deploy"
version = "0.1.0"
description = "crewai_for_deploy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crewai_for_deploy = "crewai_for_deploy.main:run"
run_crew = "crewai_for_deploy.main:run"
train = "crewai_for_deploy.main:train"
replay = "crewai_for_deploy.main:replay"
test = "crewai_for_deploy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
